2022-09-05T16:03:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994651829
* notice: last 14d: unq all: 13 23
* notice: prev accum: outdated-unq outdated-all / unq all: 43 51 / 63 76
* notice: next accum: outdated-unq outdated-all / unq all: 44 53 / 63 76
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-22] / []

2022-09-05T08:07:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2991662240
* notice: last 14d: unq all: 14 25
* notice: prev accum: outdated-unq outdated-all / unq all: 43 51 / 62 75
* notice: next accum: outdated-unq outdated-all / unq all: 43 51 / 63 76
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-04]

2022-09-01T08:07:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2969951552
* notice: last 14d: unq all: 14 24
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 62 75
* notice: next accum: outdated-unq outdated-all / unq all: 43 51 / 62 75
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-18] / []

2022-09-01T00:28:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2967996206
* notice: last 14d: unq all: 14 26
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 61 74
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 62 75
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T08:07:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2962255814
* notice: last 14d: unq all: 13 25