@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-05T16:03:00Z",
+  "timestamp" : "2022-09-11T08:00:29Z",
   "count_outdated" : 53,
   "uniques_outdated" : 44,
-  "count" : 76,
-  "uniques" : 63,
+  "count" : 77,
+  "uniques" : 64,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
