@@ -1,3 +1,11 @@
+2022-09-11T08:00:29Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031042832
+* notice: last 14d: unq all: 13 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 53 / 63 76
+* notice: next accum: outdated-unq outdated-all / unq all: 44 53 / 64 77
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-11]
+
 2022-09-05T16:03:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994651829
 * notice: last 14d: unq all: 13 23
